--- a/src/assets/sass/layout/_navigation.scss
+++ b/src/assets/sass/layout/_navigation.scss
@@ -18,6 +18,7 @@
     z-index: 200;
     text-align: center;
     cursor: pointer;
+    border: 1px solid #eee;
   }
 
   &__background {
@@ -30,7 +31,7 @@
     background-image: radial-gradient(rgb(221, 221, 221), rgb(149, 186, 199));
     z-index: 100;
     transition: transform 1s cubic-bezier(0.85, 0, 0.15, 1);
-
+    transform: scale(0);
   }
 
   &__nav {
@@ -83,8 +84,11 @@
       background-position: 200%;
       transform: translateX(1rem);
     }
-  }
 
+    &__sub{
+      font-size: 1rem!important;
+    }
+  }
 
   &__checkbox:checked ~ &__background {
     transform: scale(100);
@@ -146,4 +150,8 @@
     transform: rotate(-135deg);
     top: 0;
   }
+}
+
+.navigation__sub{
+  font-size: 1rem;
 }
