--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -34,24 +34,75 @@
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
 
     &:hover {
-      transform: scale(2) translateX(50px);
+      transform: scale(1.5) translateX(50px);
 
     }
   }
 }
 
+.download {
+  margin-top: 1rem;
+  display: flex;
+  justify-content: center;
+}
+
 .download__icon {
   width: 2rem;
+  margin-right: 0.5rem;
+}
+
+.download__text {
+  color: #666;
+  margin-top: 0.8rem;
+  font-style: italic;
+  font-family: 'GFS Didot', serif;
+
+  &:hover {
+    opacity: 0.8;
+  }
+
+  &::after {
+    text-align: center;
+    content: '';
+    display: block;
+    width: 20%;
+    height: 2px;
+    opacity: 0.5;
+    background: #666666;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    transition: width .3s, opacity .3s;
+  }
+
+  &:hover::after {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    transition: width .5s;
+    opacity: 1;
+  }
+
 }
 
 .resume {
   width: 40%;
+  font-size: 14px;
   font-family: 'Noto Sans', sans-serif;
   color: #666;
+
+  &__text {
+    text-align: justify;
+    list-style: none;
+
+    &--list {
+      padding: 1rem;
+    }
+  }
 }
 
-.picture{
+.picture {
   width: 30%;
+
   img {
     width: 60%;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
@@ -62,7 +113,7 @@
 }
 
 .order-link {
-  margin-top: 3rem;
+  margin-top: 1rem;
   font-family: 'GFS Didot', serif;
   text-transform: uppercase;
   font-size: 18px;
@@ -70,23 +121,114 @@
   text-align: center;
   display: inline-block;
   width: 100%;
+
+
+  a {
+    color: #666666;
+  }
+
+  &:hover {
+    opacity: 0.8;
+  }
+
   &::after {
     text-align: center;
     content: '';
     display: block;
-    width: 0;
-    height: 5px;
-    background: #ECEDED;
-    margin-left:50%;
+    width: 10%;
+    height: 3px;
+    opacity: 0.5;
+    background: #666666;
+    margin-left: 50%;
     transform: translateX(-50%);
-    transition: width .3s;
+    transition: width .3s, opacity .3s;
   }
 
   &:hover::after {
-    margin-left:50%;
+    margin-left: 50%;
     transform: translateX(-50%);
-    width: 50%;
+    width: 40%;
     transition: width .5s;
+    opacity: 1;
   }
+}
+
+.author__box {
+
+  &--1 {
+    margin-top: 10rem;
+
+  }
+
+  &--2 {
+    margin-top: 7rem;
+
+  }
+
+  &--header--1 {
+    color: #b5c5d3;
+    &::after {
+      text-align: center;
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      opacity: 0.5;
+      background: #666666;
+      transition: width .3s, opacity .3s;
+    }
+
+    &:hover::after {
+      width: 10%;
+      transition: width .5s;
+      opacity: 1;
+    }
+  }
+
+  &--header--2 {
+    text-align: right;
+color: #b5c5d3;
+    &::after {
+      margin-left: 87%;
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      opacity: 0.5;
+      background: #666666;
+      transition: width .3s, opacity .3s;
+    }
+
+    &:hover::after {
+      width: 13%;
+      transition: width .5s;
+      opacity: 1;
+    }
+  }
+
+  &--modal {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
+.author__text {
+  text-align: justify;
+  width: 75%;
+  color: #666;
+  font-size: 14px;
+  font-family: 'Noto Sans', sans-serif;
+}
+
+.profile-picture--box {
+  height: 25px;
+}
+
+.profile-picture {
+  height: 20rem;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
+
 }
 
