--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -29,8 +29,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #ECEDED;
-    background: $home-left;
+    background: $home-right, url("../img/cover-left-picture.jpg");
+    background-size: cover;
+    background-position: center;
+    color: #666;
     overflow: hidden;
     animation-name: moveInLeft;
     animation-duration: 0.8s;
@@ -40,7 +42,7 @@
 
     &:hover {
       width: 80%;
-      box-shadow: 10px 5px 10px rgba(black, 0.2);
+      box-shadow: 10px 5px 10px rgba(black, 0.5);
 
     }
 
@@ -54,9 +56,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    color: #8FB1C4;
-    background: $home-right;
-
+    background: $home-right, url("../img/cover-right-picture.jpg");
+    background-size: cover;
+    background-position: center;
+    color: #F9F9F9;
     animation-name: moveInRight;
     animation-duration: 0.8s;
     animation-timing-function: ease-out;
@@ -85,7 +88,7 @@
   width: 300px;
 
   &--1 {
-    color: #666;
+    color: #fefefe;
     transition: all .5s;
 
     &:hover {
@@ -99,7 +102,7 @@
       display: block;
       width: 5%;
       height: 2px;
-      background: #ECEDED;
+      background: #fefefe;
       transition: width .3s;
     }
 
@@ -114,7 +117,7 @@
     transition: all .5s;
 
     &:hover {
-      color: #666;
+      color: #fefefe;
       transform: scale(1.3);
     }
 
@@ -124,7 +127,7 @@
       display: block;
       width: 5%;
       height: 2px;
-      background: #8FB1C4;
+      background: #666;
       transition: width .3s;
     }
 
