--- a/src/assets/sass/page/book-page.scss
+++ b/src/assets/sass/page/book-page.scss
@@ -214,21 +214,54 @@ color: #b5c5d3;
   }
 }
 
-.author__text {
+  .author__text {
   text-align: justify;
   width: 75%;
   color: #666;
   font-size: 14px;
   font-family: 'Noto Sans', sans-serif;
+  transform: translate(-100px, 100px);
 }
 
 .profile-picture--box {
   height: 25px;
+  position: relative;
+  transform: translateY(-100px);
+  opacity: 0;
 }
 
 .profile-picture {
   height: 20rem;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.5);
 
+}
+
+.profile-box{
+  position: absolute;
+
+  &--1{
+    top:-3rem;
+    right: 3rem;
+  }
+  &--2{
+    top:-3rem;
+    left: 3rem;
+  }
+}
+
+.video-box{
+  margin-top: 10rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+  &--modal{
+    width: 20%;
+    border:1px solid #666;
+
+    &--1{
+      width: 50%;
+    }
+  }
 }
 
