--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,9 @@
     opacity: 1;
     transform: translateX(0); } }
 
+.navigation li {
+  list-style: none; }
+
 .navigation a {
   text-decoration: none; }
 
@@ -137,6 +140,53 @@
 .navigation__sub {
   font-size: 1rem; }
 
+@media only screen and (max-width: 1200px) {
+  .navigation li {
+    list-style: none; }
+  .navigation a {
+    text-decoration: none; }
+  .navigation__button {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 1rem;
+    right: 3.5rem;
+    z-index: 200;
+    text-align: center;
+    cursor: pointer;
+    border: 1px solid #eee; }
+  .navigation__background {
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    position: fixed;
+    top: 1.5rem;
+    right: 4rem;
+    background-image: radial-gradient(#dddddd, #95bac7);
+    z-index: 100;
+    transition: transform 1s cubic-bezier(0.85, 0, 0.15, 1);
+    transform: scale(0); }
+  .navigation__icon {
+    position: relative;
+    margin-top: 1.46rem; }
+    .navigation__icon, .navigation__icon::before, .navigation__icon::after {
+      width: 1.3rem;
+      height: 2px;
+      background-color: #333;
+      display: inline-block; }
+    .navigation__icon::before, .navigation__icon::after {
+      content: "";
+      position: absolute;
+      left: 0;
+      transition: all 0.2s; }
+    .navigation__icon:before {
+      top: -0.5rem; }
+    .navigation__icon:after {
+      top: 0.5rem; }
+  .navigation__checkbox:checked ~ .navigation__background {
+    transform: scale(150); } }
+
 .navbar {
   height: 6rem;
   background-color: #fff;
@@ -157,6 +207,10 @@
     margin-top: 1rem;
     text-align: center;
     align-self: center; }
+
+@media only screen and (max-width: 1200px) {
+  .navbar--center {
+    display: none; } }
 
 #footer {
   width: 100vw;
@@ -283,9 +337,12 @@
 
 @media only screen and (max-width: 1200px) {
   .home-box {
-    flex-direction: column; }
+    flex-direction: column;
+    justify-content: center;
+    width: 100vw;
+    border-radius: 0;
+    height: 100vh; }
     .home-box--1 {
-      border-radius: 5px;
       width: 100%;
       transition: height 1s;
       box-shadow: 0 5px 5px rgba(0, 0, 0, 0.2); }
@@ -294,7 +351,6 @@
         width: 100%;
         box-shadow: 0 5px 15px rgba(0, 0, 0, 0.8); }
     .home-box--2 {
-      border-radius: 5px;
       width: 100%;
       transition: height 1s; }
       .home-box--2:hover {
