--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -4,8 +4,13 @@
 @import "layout/navigation";
 @import "layout/navbar";
 @import "layout/footer";
+@import "layout/cover";
+@import "layout/resume";
+@import "layout/homeLeftPicture";
+@import "layout/order-link";
 
 @import "page/home.scss";
 @import "base/_base.scss";
 @import "page/book-page";
+@import "page/author-page";
 
