--- a/public/css/style.css
+++ b/public/css/style.css
@@ -234,6 +234,109 @@
   .footer--container__bottom--text {
     font-size: 0.8rem; }
 
+.cover {
+  width: 20%; }
+  .cover__img {
+    width: 100%;
+    transition: all 0.5s;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+    position: absolute;
+    top: 0;
+    left: 0;
+    backface-visibility: hidden; }
+    .cover__img--back {
+      transform: rotateY(180deg); }
+
+.cover--box {
+  position: relative; }
+  .cover--box:hover .cover--box--front {
+    transform: rotateY(-180deg) scale(1.7) translateX(50px); }
+  .cover--box:hover .cover--box--back {
+    transform: rotateY(0) scale(1.7) translateX(50px); }
+
+.download {
+  margin-top: 31rem;
+  display: flex;
+  justify-content: center; }
+
+.download__icon {
+  width: 2rem;
+  margin-right: 0.5rem; }
+
+.download__text {
+  color: #666;
+  margin-top: 1rem;
+  font-style: italic;
+  font-family: 'GFS Didot', serif; }
+  .download__text:hover {
+    opacity: 0.8; }
+  .download__text::after {
+    text-align: center;
+    content: '';
+    display: block;
+    width: 20%;
+    height: 2px;
+    opacity: 0.5;
+    background: #666666;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    transition: width .3s, opacity .3s; }
+  .download__text:hover::after {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 100%;
+    transition: width .5s;
+    opacity: 1; }
+
+.resume {
+  width: 40%;
+  font-size: 14px;
+  font-family: 'Noto Sans', sans-serif;
+  color: #666; }
+  .resume__text {
+    text-align: justify;
+    list-style: none; }
+    .resume__text--list {
+      padding: 1rem; }
+
+.picture {
+  width: 30%; }
+  .picture img {
+    width: 60%;
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
+    border-radius: 1%;
+    transform: scale(0.5); }
+
+.order-link {
+  margin-top: 1rem;
+  font-family: 'GFS Didot', serif;
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 2px;
+  text-align: center;
+  display: inline-block;
+  width: 100%;
+  color: #666; }
+  .order-link:hover {
+    opacity: 0.8; }
+  .order-link::after {
+    text-align: center;
+    content: '';
+    display: block;
+    width: 10%;
+    height: 3px;
+    opacity: 0.5;
+    background: #666666;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    transition: width .3s, opacity .3s; }
+  .order-link:hover::after {
+    margin-left: 50%;
+    transform: translateX(-50%);
+    width: 40%;
+    transition: width .5s;
+    opacity: 1; }
+
 .home {
   width: 100%; }
 
@@ -400,100 +503,28 @@ a {
 .book-containter {
   display: flex;
   justify-content: space-between;
-  margin-top: 5rem; }
+  margin-top: 5rem;
+  position: relative; }
 
-.cover {
-  width: 20%; }
-  .cover__img {
-    width: 100%;
-    transition: all 0.5s;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5); }
-    .cover__img:hover {
-      transform: scale(1.5) translateX(50px); }
+#background_video {
+  object-fit: cover;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  opacity: 0.5;
+  width: 100%;
+  height: 100%; }
 
-.download {
-  margin-top: 1rem;
+.video-box {
+  margin-top: 10rem;
   display: flex;
-  justify-content: center; }
-
-.download__icon {
-  width: 2rem;
-  margin-right: 0.5rem; }
-
-.download__text {
-  color: #666;
-  margin-top: 0.8rem;
-  font-style: italic;
-  font-family: 'GFS Didot', serif; }
-  .download__text:hover {
-    opacity: 0.8; }
-  .download__text::after {
-    text-align: center;
-    content: '';
-    display: block;
+  flex-direction: row;
+  justify-content: space-between; }
+  .video-box--modal {
     width: 20%;
-    height: 2px;
-    opacity: 0.5;
-    background: #666666;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    transition: width .3s, opacity .3s; }
-  .download__text:hover::after {
-    margin-left: 50%;
-    transform: translateX(-50%);
-    width: 100%;
-    transition: width .5s;
-    opacity: 1; }
-
-.resume {
-  width: 40%;
-  font-size: 14px;
-  font-family: 'Noto Sans', sans-serif;
-  color: #666; }
-  .resume__text {
-    text-align: justify;
-    list-style: none; }
-    .resume__text--list {
-      padding: 1rem; }
-
-.picture {
-  width: 30%; }
-  .picture img {
-    width: 60%;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
-    border-radius: 1%;
-    transform: scale(0.5); }
-
-.order-link {
-  margin-top: 1rem;
-  font-family: 'GFS Didot', serif;
-  text-transform: uppercase;
-  font-size: 18px;
-  letter-spacing: 2px;
-  text-align: center;
-  display: inline-block;
-  width: 100%; }
-  .order-link a {
-    color: #666666; }
-  .order-link:hover {
-    opacity: 0.8; }
-  .order-link::after {
-    text-align: center;
-    content: '';
-    display: block;
-    width: 10%;
-    height: 3px;
-    opacity: 0.5;
-    background: #666666;
-    margin-left: 50%;
-    transform: translateX(-50%);
-    transition: width .3s, opacity .3s; }
-  .order-link:hover::after {
-    margin-left: 50%;
-    transform: translateX(-50%);
-    width: 40%;
-    transition: width .5s;
-    opacity: 1; }
+    border: 1px solid #666;
+    height: 3rem; }
 
 .author__box--1 {
   margin-top: 10rem; }
@@ -566,14 +597,3 @@ a {
   .profile-box--2 {
     top: -3rem;
     left: 3rem; }
-
-.video-box {
-  margin-top: 10rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between; }
-  .video-box--modal {
-    width: 20%;
-    border: 1px solid #666; }
-    .video-box--modal--1 {
-      width: 50%; }
