--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -1,4 +1,3 @@
-
 .home {
   width: 100%;
 }
@@ -11,19 +10,16 @@
   align-items: center;
   border-radius: 15px;
   background-color: transparent;
-  // clip-path: polygon(0 0, 100% 0, 100% 80%, 0 100%);
   backface-visibility: hidden;
   overflow: hidden;
   margin-left: 50%;
   transform: translateX(-50%);
-
 
   a {
     text-decoration: none;
   }
 
   &--1 {
-    //border-radius: 50px 0 0 50px;
     height: 62%;
     width: 50%;
     display: flex;
@@ -45,8 +41,6 @@
       box-shadow: 10px 5px 10px rgba(black, 0.5);
 
     }
-
-
   }
 
   &--2 {
@@ -64,7 +58,7 @@
     animation-duration: 0.8s;
     animation-timing-function: ease-out;
     transition: width 1.5s;
-    box-shadow:9px 3px 8px rgba(0, 0, 0, 0.25);
+    box-shadow: 9px 3px 8px rgba(0, 0, 0, 0.25);
 
     &:hover {
       width: 80%;
@@ -136,39 +130,64 @@
       transition: width .5s;
     }
   }
-
-
 }
 
-@media only screen and (max-width: 1200px) {
+@media only screen and (max-width: 992px) {
+  .home {
+
+  }
   .home-box {
     flex-direction: column;
     justify-content: center;
     width: 100vw;
     border-radius: 0;
     height: 100vh;
+
     &--1 {
+      color: #666;
       width: 100%;
-      transition: height 1s;
       box-shadow: 0 5px 5px rgba(black, 0.2);
+      background: none;
+
+      a {
+        color: #666;
+      }
 
       &:hover {
-        height: 200%;
-        width: 100%;
         box-shadow: 0 5px 15px rgba(black, 0.8);
-
+        width: 100%;
       }
     }
 
     &--2 {
+      color: #666;
       width: 100%;
-      transition: height 1s;
+      background: none;
 
       &:hover {
-        height: 200%;
         width: 100%;
         box-shadow: 0 -10px 10px rgba(black, 0.25);
 
+      }
+    }
+  }
+
+  .home__link {
+    &--1 {
+      color: #666;
+
+      &:hover {
+        color: #b5c5d3;
+      }
+
+      &::after {
+        background: #666;
+      }
+    }
+
+    &--2 {
+      &:hover {
+        color: #b5c5d3;
       }
     }
   }
