--- a/src/assets/sass/layout/cover.scss
+++ b/src/assets/sass/layout/cover.scss
@@ -1,5 +1,6 @@
 .cover {
   width: 20%;
+  margin-right: 2rem;
 
   &__img {
     width: 100%;
@@ -46,7 +47,7 @@
 
 .download__text {
   color: #666;
-  margin-top: 1rem;
+  margin-top: 2rem;
   font-style: italic;
   font-family: 'GFS Didot', serif;
 
