--- a/src/assets/sass/layout/resume.scss
+++ b/src/assets/sass/layout/resume.scss
@@ -4,6 +4,8 @@
   font-size: 14px;
   font-family: 'Noto Sans', sans-serif;
   color: #666;
+  margin-right: 2rem;
+
 
   &__text {
     text-align: justify;
