--- a/public/css/style.css
+++ b/public/css/style.css
@@ -187,30 +187,217 @@
   .navigation__checkbox:checked ~ .navigation__background {
     transform: scale(150); } }
 
-.navbar {
-  height: 6rem;
-  background-color: #fff;
-  width: 100%;
+.cabinet--navbar {
+  display: flex;
+  justify-content: space-between;
+  height: 8rem;
+  background-color: #b5c5d3;
+  width: 100vw;
   position: fixed;
   top: 0;
   z-index: 5;
   text-transform: uppercase;
-  color: #666;
   box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08);
-  line-height: 9px; }
-  .navbar--left {
-    align-self: center; }
-    .navbar--left--2 {
+  line-height: 9px;
+  color: #fff; }
+  .cabinet--navbar ul {
+    margin-bottom: 0; }
+  .cabinet--navbar--left {
+    align-self: center;
+    margin-left: 1rem;
+    letter-spacing: 2px; }
+    .cabinet--navbar--left--1 {
+      font-size: 1.25rem; }
+    .cabinet--navbar--left--2 {
       font-size: 0.8rem;
-      margin-left: 1rem; }
-  .navbar--center {
-    margin-top: 1rem;
+      margin-bottom: 7px; }
+    .cabinet--navbar--left--3 {
+      font-size: 0.8rem;
+      margin-bottom: 0; }
+  .cabinet--navbar--center {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
     text-align: center;
-    align-self: center; }
+    align-self: center;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+    letter-spacing: 2px; }
+    .cabinet--navbar--center a, .cabinet--navbar--center a:hover {
+      color: #fff;
+      text-decoration: none;
+      display: inline-block;
+      position: relative; }
+    .cabinet--navbar--center--link {
+      margin-right: 2rem; }
+      .cabinet--navbar--center--link:after {
+        margin-top: 0.25rem;
+        text-align: center;
+        content: '';
+        display: block;
+        background: #fff;
+        width: 30%;
+        height: 2px;
+        opacity: 0.5;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        transition: width .3s, opacity .3s; }
+      .cabinet--navbar--center--link:hover:after {
+        margin-left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        transition: width .25s;
+        opacity: 1; }
+  .cabinet--navbar--right {
+    text-align: right;
+    align-self: center;
+    letter-spacing: 2px;
+    margin-right: 1rem;
+    border: 1px solid #ffffff;
+    border-radius: 25px;
+    padding: 1rem 2rem;
+    color: #b5c5d3;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    transition: all .4s; }
+    .cabinet--navbar--right p {
+      margin-bottom: 0; }
+    .cabinet--navbar--right:hover {
+      background-color: #ffffff;
+      transform: translateY(-3px); }
+      .cabinet--navbar--right:hover a {
+        color: #b5c5d3; }
+      .cabinet--navbar--right:hover:active {
+        transform: translateY(3px); }
+  .cabinet--navbar li {
+    text-decoration: none;
+    display: inline-block; }
 
-@media only screen and (max-width: 1200px) {
-  .navbar--center {
-    display: none; } }
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  width: 22rem; }
+  .dropdown-content a {
+    color: #b5c5d3;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left; }
+    .dropdown-content a:hover {
+      background-color: #ddd;
+      width: 100%; }
+
+.dropdown:hover .dropdown-content {
+  display: block; }
+
+.cabinet--navbar {
+  display: flex;
+  justify-content: space-between;
+  height: 8rem;
+  background-color: #b5c5d3;
+  width: 100vw;
+  position: fixed;
+  top: 0;
+  z-index: 5;
+  text-transform: uppercase;
+  box-shadow: 0.067em 0.067em 4.133em rgba(12, 71, 84, 0.08);
+  line-height: 9px;
+  color: #fff; }
+  .cabinet--navbar ul {
+    margin-bottom: 0; }
+  .cabinet--navbar--left {
+    align-self: center;
+    margin-left: 1rem;
+    letter-spacing: 2px; }
+    .cabinet--navbar--left--1 {
+      font-size: 1.25rem; }
+    .cabinet--navbar--left--2 {
+      font-size: 0.8rem;
+      margin-bottom: 7px; }
+    .cabinet--navbar--left--3 {
+      font-size: 0.8rem;
+      margin-bottom: 0; }
+  .cabinet--navbar--center {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    text-align: center;
+    align-self: center;
+    font-size: 0.8rem;
+    margin-bottom: 0;
+    letter-spacing: 2px; }
+    .cabinet--navbar--center a, .cabinet--navbar--center a:hover {
+      color: #fff;
+      text-decoration: none;
+      display: inline-block;
+      position: relative; }
+    .cabinet--navbar--center--link {
+      margin-right: 2rem; }
+      .cabinet--navbar--center--link:after {
+        margin-top: 0.25rem;
+        text-align: center;
+        content: '';
+        display: block;
+        background: #fff;
+        width: 30%;
+        height: 2px;
+        opacity: 0.5;
+        margin-left: 50%;
+        transform: translateX(-50%);
+        transition: width .3s, opacity .3s; }
+      .cabinet--navbar--center--link:hover:after {
+        margin-left: 50%;
+        transform: translateX(-50%);
+        width: 80%;
+        transition: width .25s;
+        opacity: 1; }
+  .cabinet--navbar--right {
+    text-align: right;
+    align-self: center;
+    letter-spacing: 2px;
+    margin-right: 1rem;
+    border: 1px solid #ffffff;
+    border-radius: 25px;
+    padding: 1rem 2rem;
+    color: #b5c5d3;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    transition: all .4s; }
+    .cabinet--navbar--right p {
+      margin-bottom: 0; }
+    .cabinet--navbar--right:hover {
+      background-color: #ffffff;
+      transform: translateY(-3px); }
+      .cabinet--navbar--right:hover a {
+        color: #b5c5d3; }
+      .cabinet--navbar--right:hover:active {
+        transform: translateY(3px); }
+  .cabinet--navbar li {
+    text-decoration: none;
+    display: inline-block; }
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+  width: 22rem; }
+  .dropdown-content a {
+    color: #b5c5d3;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left; }
+    .dropdown-content a:hover {
+      background-color: #ddd;
+      width: 100%; }
+
+.dropdown:hover .dropdown-content {
+  display: block; }
 
 #footer {
   width: 100vw;
@@ -235,7 +422,8 @@
     font-size: 0.8rem; }
 
 .cover {
-  width: 20%; }
+  width: 20%;
+  margin-right: 2rem; }
   .cover__img {
     width: 100%;
     transition: all 0.5s;
@@ -265,7 +453,7 @@
 
 .download__text {
   color: #666;
-  margin-top: 1rem;
+  margin-top: 2rem;
   font-style: italic;
   font-family: 'GFS Didot', serif; }
   .download__text:hover {
@@ -292,7 +480,8 @@
   width: 40%;
   font-size: 14px;
   font-family: 'Noto Sans', sans-serif;
-  color: #666; }
+  color: #666;
+  margin-right: 2rem; }
   .resume__text {
     text-align: justify;
     list-style: none; }
@@ -300,9 +489,9 @@
       padding: 1rem; }
 
 .picture {
-  width: 30%; }
+  width: 20%; }
   .picture img {
-    width: 60%;
+    width: 100%;
     box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 1%;
     transform: scale(0.5); }
@@ -491,24 +680,11 @@ body {
   align-items: center; }
 
 a {
-  text-decoration: none !important; }
+  text-decoration: none !important;
+  color: #fff; }
 
-#book_page {
-  margin: 7rem;
-  width: 90vw;
-  text-align: left; }
-
-.header--primary {
-  color: #b5c5d3;
-  font-size: 3rem;
-  text-transform: uppercase;
-  letter-spacing: 4px; }
-
-.header--secondary {
-  color: #666;
-  margin-top: 1.5rem;
-  font-style: italic;
-  font-family: 'GFS Didot', serif; }
+#book-container {
+  width: 100vw; }
 
 .book-containter {
   display: flex;
@@ -536,50 +712,49 @@ a {
     border: 1px solid #666;
     height: 3rem; }
 
-.author__box--1 {
-  margin-top: 10rem; }
-
-.author__box--2 {
-  margin-top: 7rem; }
-
-.author__box--header--1 {
-  color: #b5c5d3; }
-  .author__box--header--1::after {
-    text-align: center;
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    opacity: 0.5;
-    background: #666666;
-    transition: width .3s, opacity .3s; }
-  .author__box--header--1:hover::after {
-    width: 10%;
-    transition: width .5s;
-    opacity: 1; }
-
-.author__box--header--2 {
-  text-align: right;
-  color: #b5c5d3; }
-  .author__box--header--2::after {
-    margin-left: 87%;
-    content: '';
-    display: block;
-    width: 0;
-    height: 2px;
-    opacity: 0.5;
-    background: #666666;
-    transition: width .3s, opacity .3s; }
-  .author__box--header--2:hover::after {
-    width: 13%;
-    transition: width .5s;
-    opacity: 1; }
-
-.author__box--modal {
-  margin-top: 1.5rem;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between; }
+.author__box {
+  text-align: center; }
+  .author__box--1 {
+    margin-top: 10rem; }
+  .author__box--2 {
+    margin-top: 7rem; }
+  .author__box--header--1 {
+    color: #b5c5d3;
+    text-align: left; }
+    .author__box--header--1::after {
+      text-align: center;
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      opacity: 0.5;
+      background: #666666;
+      transition: width .3s, opacity .3s; }
+    .author__box--header--1:hover::after {
+      width: 10%;
+      transition: width .5s;
+      opacity: 1; }
+  .author__box--header--2 {
+    text-align: right;
+    color: #b5c5d3; }
+    .author__box--header--2::after {
+      margin-left: 87%;
+      content: '';
+      display: block;
+      width: 0;
+      height: 2px;
+      opacity: 0.5;
+      background: #666666;
+      transition: width .3s, opacity .3s; }
+    .author__box--header--2:hover::after {
+      width: 13%;
+      transition: width .5s;
+      opacity: 1; }
+  .author__box--modal {
+    margin-top: 1.5rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between; }
 
 .author__text {
   text-align: justify;
@@ -607,3 +782,49 @@ a {
   .profile-box--2 {
     top: -3rem;
     left: 3rem; }
+
+#page {
+  margin: 7rem 3rem;
+  width: 95vw;
+  text-align: left; }
+
+.header--primary {
+  color: #b5c5d3;
+  font-size: 3rem;
+  text-transform: uppercase;
+  letter-spacing: 4px; }
+
+.header--secondary {
+  color: #666;
+  margin-top: 0.5rem;
+  font-style: italic;
+  font-family: 'GFS Didot', serif; }
+
+.cabinet-content {
+  margin: 5rem 0;
+  display: flex;
+  flex-direction: row; }
+
+.cabinet-img-modal {
+  width: 25%;
+  position: relative; }
+  .cabinet-img-modal .cabinet-img {
+    position: absolute;
+    width: 50%;
+    z-index: 10;
+    outline-offset: 2rem;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    transition: all 0.5s; }
+    .cabinet-img-modal .cabinet-img:hover {
+      z-index: 11;
+      transform: scale(1.3); }
+    .cabinet-img-modal .cabinet-img--1 {
+      top: -1rem;
+      left: 0; }
+    .cabinet-img-modal .cabinet-img--2 {
+      top: 4rem;
+      right: 3rem; }
+    .cabinet-img-modal .cabinet-img--3 {
+      top: 12rem;
+      left: 5rem; }
