--- a/src/assets/sass/page/author-page.scss
+++ b/src/assets/sass/page/author-page.scss
@@ -1,6 +1,6 @@
 
 .author__box {
-
+text-align: center;
   &--1 {
     margin-top: 10rem;
 
@@ -13,7 +13,7 @@
 
   &--header--1 {
     color: #b5c5d3;
-
+    text-align: left;
     &::after {
       text-align: center;
       content: '';
