--- a/src/assets/sass/layout/_footer.scss
+++ b/src/assets/sass/layout/_footer.scss
@@ -2,8 +2,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: #F9F9F9;
-
+  background-color: rgba(181, 197, 211, 0.9);
 }
 
 .footer--container {
