--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,6 +20,21 @@
     opacity: 1;
     transform: translateX(0); } }
 
+.icon-tel {
+  height: 25px;
+  width: 25px;
+  margin-right: 1rem;
+  transition: all .3s; }
+  .icon-tel:hover {
+    transform: scale(1.2); }
+
+.icon-doctolib {
+  width: 5rem;
+  margin-right: 1rem;
+  transition: all .3s; }
+  .icon-doctolib:hover {
+    transform: scale(1.2); }
+
 .navigation li {
   list-style: none; }
 
@@ -252,7 +267,7 @@
     text-align: right;
     align-self: center;
     letter-spacing: 2px;
-    margin-right: 1rem;
+    margin-right: 2rem;
     border: 1px solid #ffffff;
     border-radius: 25px;
     padding: 1rem 2rem;
@@ -297,7 +312,7 @@
   display: flex;
   justify-content: space-between;
   height: 8rem;
-  background-color: #b5c5d3;
+  background-color: rgba(181, 197, 211, 0.9);
   width: 100vw;
   position: fixed;
   top: 0;
@@ -358,7 +373,7 @@
     text-align: right;
     align-self: center;
     letter-spacing: 2px;
-    margin-right: 1rem;
+    margin-right: 2rem;
     border: 1px solid #ffffff;
     border-radius: 25px;
     padding: 1rem 2rem;
@@ -403,7 +418,7 @@
   width: 100vw;
   display: flex;
   justify-content: center;
-  background-color: #F9F9F9; }
+  background-color: rgba(181, 197, 211, 0.9); }
 
 .footer--container {
   text-align: center; }
@@ -525,6 +540,37 @@
     width: 40%;
     transition: width .5s;
     opacity: 1; }
+
+.modal-box {
+  color: #f9f9f9;
+  font-family: "Lato", sans-serif;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 20000;
+  background-color: #b5c5d3;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  padding: 2rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center; }
+
+.modal-btn {
+  padding: 0.5rem 2rem;
+  background-color: #f9f9f9;
+  border-radius: 25px;
+  border: none;
+  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
+  transition: all .3s;
+  color: #666666;
+  font-family: "Lato", sans-serif; }
+  .modal-btn:hover {
+    transform: translateY(-3px); }
+  .modal-btn:active {
+    transform: translateY(3px); }
 
 .home {
   width: 100%; }
@@ -714,42 +760,50 @@ a {
 
 .author__box {
   text-align: center; }
+  .author__box a {
+    color: #666; }
+    .author__box a:hover {
+      color: #b5c5d3; }
   .author__box--1 {
     margin-top: 10rem; }
   .author__box--2 {
     margin-top: 7rem; }
-  .author__box--header--1 {
+  .author__box--header {
     color: #b5c5d3;
-    text-align: left; }
-    .author__box--header--1::after {
-      text-align: center;
-      content: '';
-      display: block;
-      width: 0;
-      height: 2px;
-      opacity: 0.5;
-      background: #666666;
-      transition: width .3s, opacity .3s; }
-    .author__box--header--1:hover::after {
-      width: 10%;
-      transition: width .5s;
-      opacity: 1; }
-  .author__box--header--2 {
-    text-align: right;
-    color: #b5c5d3; }
-    .author__box--header--2::after {
-      margin-left: 87%;
-      content: '';
-      display: block;
-      width: 0;
-      height: 2px;
-      opacity: 0.5;
-      background: #666666;
-      transition: width .3s, opacity .3s; }
-    .author__box--header--2:hover::after {
-      width: 13%;
-      transition: width .5s;
-      opacity: 1; }
+    margin-top: 0.5rem;
+    font-style: italic;
+    font-family: 'GFS Didot', serif; }
+    .author__box--header--1 {
+      text-align: left; }
+      .author__box--header--1::after {
+        text-align: center;
+        content: '';
+        display: block;
+        width: 0;
+        height: 2px;
+        opacity: 0.5;
+        background: #666666;
+        transition: width .3s, opacity .3s; }
+      .author__box--header--1:hover::after {
+        width: 10%;
+        transition: width .5s;
+        opacity: 1; }
+    .author__box--header--2 {
+      text-align: right;
+      color: #b5c5d3; }
+      .author__box--header--2::after {
+        margin-left: 87%;
+        content: '';
+        display: block;
+        width: 0;
+        height: 2px;
+        opacity: 0.5;
+        background: #666666;
+        transition: width .3s, opacity .3s; }
+      .author__box--header--2:hover::after {
+        width: 13%;
+        transition: width .5s;
+        opacity: 1; }
   .author__box--modal {
     margin-top: 1.5rem;
     display: flex;
@@ -800,10 +854,23 @@ a {
   font-style: italic;
   font-family: 'GFS Didot', serif; }
 
+.cabinet-page {
+  font-weight: 400; }
+  .cabinet-page a {
+    color: #666666; }
+    .cabinet-page a:hover {
+      color: #b5c5d3; }
+
 .cabinet-content {
-  margin: 5rem 0;
+  margin-top: 2rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: row; }
+
+#cabinet-background {
+  border-radius: 5px;
+  box-shadow: 0 7px 30px rgba(0, 0, 0, 0.1);
+  padding-bottom: 2rem; }
 
 .cabinet-img-modal {
   width: 25%;
@@ -813,18 +880,40 @@ a {
     width: 50%;
     z-index: 10;
     outline-offset: 2rem;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
     border-radius: 5px;
-    transition: all 0.5s; }
+    transition: all .2s; }
     .cabinet-img-modal .cabinet-img:hover {
       z-index: 11;
       transform: scale(1.3); }
     .cabinet-img-modal .cabinet-img--1 {
-      top: -1rem;
-      left: 0; }
+      top: 1rem;
+      left: 1rem; }
     .cabinet-img-modal .cabinet-img--2 {
       top: 4rem;
       right: 3rem; }
     .cabinet-img-modal .cabinet-img--3 {
       top: 12rem;
       left: 5rem; }
+
+.acces-content {
+  display: flex;
+  flex-direction: row;
+  margin-top: 6rem; }
+
+.acces-text {
+  margin-left: 25%; }
+
+.acces-info {
+  margin-top: 3rem; }
+
+.acces-img {
+  margin-top: -2rem;
+  width: 36%;
+  position: absolute;
+  right: 7rem;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 5px; }
+
+#cabinet {
+  width: 100vw; }
