--- a/src/assets/sass/layout/cabinet-navbar.scss
+++ b/src/assets/sass/layout/cabinet-navbar.scss
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: space-between;
   height: 8rem;
-  background-color: #b5c5d3;
+  background-color: rgba(181, 197, 211, 0.9);
   width: 100vw;
   position: fixed;
   top: 0;
@@ -80,7 +80,7 @@
     text-align: right;
     align-self: center;
     letter-spacing: 2px;
-    margin-right: 1rem;
+    margin-right: 2rem;
     border: 1px solid #ffffff;
     border-radius:25px;
     padding: 1rem 2rem;
