--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -1,9 +1,28 @@
+.cabinet-page{
+  font-weight: 400;
+
+  a{
+    color: #666666;
+
+    &:hover{
+      color: #b5c5d3;
+    }
+
+  }
+}
+
 .cabinet-content {
-  margin: 5rem 0;
+  margin-top: 2rem;
+  padding-top: 2rem;
   display: flex;
   flex-direction: row;
 }
 
+#cabinet-background{
+  border-radius: 5px;
+  box-shadow: 0 7px 30px rgba(0,0,0,0.1);
+  padding-bottom: 2rem;
+}
 .cabinet-img-modal{
   width: 25%;
   position: relative;
@@ -13,16 +32,16 @@
     width: 50%;
     z-index: 10;
     outline-offset: 2rem;
-    box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
+    box-shadow: 0 3px 10px rgba(0,0,0,0.2);
     border-radius: 5px;
-    transition: all 0.5s;
+    transition: all .2s;
     &:hover{
       z-index: 11;
       transform: scale(1.3);
     }
     &--1{
-      top:-1rem;
-      left:0;
+      top:1rem;
+      left:1rem;
     }
     &--2{
       top:4rem;
@@ -34,4 +53,26 @@
       left:5rem;
     }
   }
+}
+.acces-content{
+  display: flex;
+  flex-direction: row;
+  margin-top: 6rem;
+}
+
+.acces-text{
+  margin-left: 25%;
+}
+
+.acces-info{
+  margin-top: 3rem;
+}
+
+.acces-img{
+  margin-top: -2rem;
+  width: 36%;
+  position: absolute;
+  right: 7rem;
+  box-shadow: 0px 3px 10px rgba(0,0,0,0.2);
+  border-radius: 5px;
 }
