--- a/src/assets/sass/layout/order-link.scss
+++ b/src/assets/sass/layout/order-link.scss
@@ -9,6 +9,7 @@
   display: inline-block;
   width: 100%;
   color: #666;
+  font-weight: 400;
 
 
   &:hover {
@@ -20,9 +21,9 @@
     content: '';
     display: block;
     width: 10%;
-    height: 3px;
+    height: 2px;
     opacity: 0.5;
-    background: #666666;
+    background: #b5c5d3;
     margin-left: 50%;
     transform: translateX(-50%);
     transition: width .3s, opacity .3s;
