--- a/src/assets/sass/page/home.scss
+++ b/src/assets/sass/page/home.scss
@@ -20,11 +20,12 @@
   }
 
   &--1 {
-    height: 62%;
+    height: 70%;
     width: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px 0 0 40px;
     background: $home-right, url("../img/cover-left-picture.jpg");
     background-size: cover;
     background-position: center;
@@ -34,7 +35,6 @@
     animation-duration: 0.8s;
     animation-timing-function: ease-out;
     transition: width 1.5s;
-    box-shadow: 9px 3px 8px rgba(0, 0, 0, 0.25);
 
     &:hover {
       width: 80%;
@@ -44,8 +44,8 @@
   }
 
   &--2 {
-    //border-radius: 50px 0 0 50px;
-    height: 62%;
+    border-radius: 0 40px 40px 0;
+    height: 70%;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -58,7 +58,6 @@
     animation-duration: 0.8s;
     animation-timing-function: ease-out;
     transition: width 1.5s;
-    box-shadow: 9px 3px 8px rgba(0, 0, 0, 0.25);
 
     &:hover {
       width: 80%;
