--- a/public/css/style.css
+++ b/public/css/style.css
@@ -26,14 +26,14 @@
   margin-right: 1rem;
   transition: all .3s; }
   .icon:hover {
-    transform: scale(1.2); }
+    transform: scale(1.3); }
 
 .icon-doctolib {
-  width: 3.5rem;
-  margin-right: 1rem;
+  width: 3.7rem;
   transition: all .3s; }
   .icon-doctolib:hover {
-    transform: scale(1.2); }
+    transform: scale(1.4);
+    margin-left: 0.5rem; }
 
 .navigation li {
   list-style: none; }
@@ -996,7 +996,7 @@ a {
 .spe-img-box {
   width: 30%;
   height: 20rem;
-  border: 1px solid grey;
+  border: 1px solid #F4F4F4;
   border-radius: 5px;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   display: flex;
@@ -1022,3 +1022,6 @@ a {
 
 .spe-img {
   width: 100%; }
+
+#osteo_sport {
+  margin-top: 10rem; }
