--- a/src/assets/sass/abstracts/_icon.scss
+++ b/src/assets/sass/abstracts/_icon.scss
@@ -5,17 +5,17 @@
   transition: all .3s;
 
   &:hover{
-    transform: scale(1.2);
+    transform: scale(1.3);
   }
 }
 
 
 .icon-doctolib{
-  width: 3.5rem;
-  margin-right: 1rem;
+  width: 3.7rem;
   transition: all .3s;
 
   &:hover{
-    transform: scale(1.2);
+    transform: scale(1.4);
+    margin-left: 0.5rem;
   }
 }
