--- a/src/assets/sass/page/specialisation.scss
+++ b/src/assets/sass/page/specialisation.scss
@@ -12,7 +12,7 @@
 
   width: 30%;
   height: 20rem;
-  border: 1px solid grey;
+  border: 1px solid #F4F4F4;
   border-radius: 5px;
   box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
   display: flex;
