--- a/public/css/style.css
+++ b/public/css/style.css
@@ -20,13 +20,29 @@
     opacity: 1;
     transform: translateX(0); } }
 
+@keyframes arrow-left {
+  0% {
+    transform: translateX(0); }
+  50% {
+    transform: translateX(3px); }
+  100% {
+    transform: translateX(0); } }
+
+@keyframes arrow-right {
+  0% {
+    transform: translateX(0); }
+  50% {
+    transform: translateX(3px); }
+  100% {
+    transform: translateX(0); } }
+
 .icon {
   height: 25px;
   width: 25px;
   margin-right: 1rem;
   transition: all .3s; }
   .icon:hover {
-    transform: scale(1.3); }
+    transform: scale(1.4); }
 
 .icon-doctolib {
   width: 3.7rem;
@@ -34,6 +50,16 @@
   .icon-doctolib:hover {
     transform: scale(1.4);
     margin-left: 0.5rem; }
+
+.icon-arrow-left {
+  animation-duration: 1s;
+  animation-name: arrow-left;
+  animation-iteration-count: infinite; }
+
+.icon-arrow-right {
+  animation-duration: 1s;
+  animation-name: arrow-right;
+  animation-iteration-count: infinite; }
 
 .navigation li {
   list-style: none; }
@@ -327,11 +353,16 @@
     align-self: center;
     margin-left: 1rem;
     letter-spacing: 2px; }
+    .cabinet--navbar--left a {
+      color: #fff;
+      text-decoration: none; }
+      .cabinet--navbar--left a:hover {
+        color: #E8E8E8; }
     .cabinet--navbar--left--1 {
       font-size: 1.25rem; }
     .cabinet--navbar--left--2 {
       font-size: 0.8rem;
-      margin-bottom: 7px; }
+      margin-bottom: 0.5rem; }
     .cabinet--navbar--left--3 {
       font-size: 0.8rem;
       margin-bottom: 0; }
@@ -394,6 +425,7 @@
     display: inline-block; }
 
 .dropdown-content {
+  border-radius: 5px;
   display: none;
   position: absolute;
   background-color: #f9f9f9;
@@ -408,7 +440,7 @@
     display: block;
     text-align: left; }
     .dropdown-content a:hover {
-      background-color: #ddd;
+      background-color: rgba(181, 197, 211, 0.5);
       width: 100%; }
 
 .dropdown:hover .dropdown-content {
@@ -545,6 +577,7 @@
 
 .modal-box {
   color: #f9f9f9;
+  padding: 4rem;
   font-family: "Lato", sans-serif;
   position: absolute;
   top: 50%;
@@ -553,7 +586,6 @@
   z-index: 20000;
   background-color: #b5c5d3;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.5);
-  padding: 2rem;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
@@ -579,7 +611,7 @@
 
 .home-box {
   height: 98vh;
-  width: 70%;
+  width: 80%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -592,7 +624,7 @@
   .home-box a {
     text-decoration: none; }
   .home-box--1 {
-    height: 70%;
+    height: 80%;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -612,7 +644,7 @@
       box-shadow: 10px 5px 10px rgba(0, 0, 0, 0.5); }
   .home-box--2 {
     border-radius: 0 40px 40px 0;
-    height: 70%;
+    height: 80%;
     width: 50%;
     display: flex;
     justify-content: center;
@@ -923,6 +955,7 @@ a {
 
 .acces-text {
   color: #666666;
+  padding-left: 1rem;
   margin-left: 25%; }
 
 .acces-info {
@@ -1025,3 +1058,51 @@ a {
 
 #osteo_sport {
   margin-top: 10rem; }
+
+.spe-sport {
+  display: flex;
+  justify-content: space-around; }
+
+.sport-card {
+  position: relative;
+  width: 20rem;
+  height: 26rem;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  overflow: hidden; }
+  .sport-card--header {
+    text-align: center;
+    height: 19rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1s; }
+    .sport-card--header h5 {
+      transition: all 1s;
+      color: #f9f9f9; }
+    .sport-card--header--1 {
+      background-image: url("../img/sport-interet.jpg");
+      background-size: cover; }
+    .sport-card--header--2 {
+      background-image: url("../img/all-sport.jpg");
+      background-size: cover; }
+    .sport-card--header--3 {
+      background-image: url("../img/practic-sport.jpg");
+      background-size: cover; }
+  .sport-card:hover .sport-card--header {
+    height: 26rem;
+    filter: blur(7px); }
+    .sport-card:hover .sport-card--header h5 {
+      transform: translateY(-150px); }
+  .sport-card:hover div.sport-card--body {
+    transform: translateY(-150px);
+    color: #f9f9f9; }
+
+.sport-card--body {
+  position: absolute;
+  top: 19rem;
+  transition: all 1s;
+  color: #666666;
+  margin: 1rem; }
+  .sport-card--body p {
+    font-weight: 400; }
