--- a/src/assets/sass/abstracts/_icon.scss
+++ b/src/assets/sass/abstracts/_icon.scss
@@ -5,7 +5,8 @@
   transition: all .3s;
 
   &:hover{
-    transform: scale(1.3);
+    transform: scale(1.4);
+
   }
 }
 
@@ -18,4 +19,16 @@
     transform: scale(1.4);
     margin-left: 0.5rem;
   }
+}
+
+.icon-arrow-left{
+  animation-duration: 1s;
+  animation-name: arrow-left;
+  animation-iteration-count: infinite;
+}
+
+.icon-arrow-right{
+  animation-duration: 1s;
+  animation-name: arrow-right;
+  animation-iteration-count: infinite;
 }
