--- a/src/assets/sass/abstracts/_animations.scss
+++ b/src/assets/sass/abstracts/_animations.scss
@@ -56,3 +56,16 @@
     transform: translateX(0);
   }
 }
+
+@keyframes pointer {
+  0% {
+    transform: translateX(0);
+  }
+  50% {
+    transform: translateX(20px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
