--- a/src/assets/sass/main.scss
+++ b/src/assets/sass/main.scss
@@ -22,4 +22,6 @@
 @import "page/osteopathie";
 @import "page/specialisation";
 @import "page/osteo-sport";
-
+@import "page/osteo-baby";
+@import "page/osteo-pregnant";
+@import "page/reasons";
