--- a/src/assets/sass/page/author-page.scss
+++ b/src/assets/sass/page/author-page.scss
@@ -1,4 +1,7 @@
+#author{
+  padding-top: 10rem;
 
+}
 .author__box {
 text-align: center;
   line-height: 1.75rem;
@@ -14,8 +17,6 @@ text-align: center;
     }
   }
   &--1 {
-    margin-top: 10rem;
-
   }
 
   &--2 {
