--- a/src/assets/sass/page/cabinet.scss
+++ b/src/assets/sass/page/cabinet.scss
@@ -10,8 +10,8 @@
 
   }
 }
-.cabinet-header{
-  margin-bottom: 1rem;
+#cabinet_header{
+  padding-top: 10rem;
 }
 .cabinet-content {
   display: flex;
