--- a/src/assets/sass/page/specialisation.scss
+++ b/src/assets/sass/page/specialisation.scss
@@ -1,11 +1,12 @@
 #specialisation {
-  margin-top: 10rem;
+  padding-top: 10rem;
 }
 
 .spe-body {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  margin: 3rem 1rem;
 }
 
 .spe-img-box {
