--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,14 @@
   100% {
     transform: translateX(0); } }
 
+@keyframes pointer {
+  0% {
+    transform: translateX(0); }
+  50% {
+    transform: translateX(20px); }
+  100% {
+    transform: translateX(0); } }
+
 .icon {
   height: 25px;
   width: 25px;
@@ -485,9 +493,21 @@
 .cover--box {
   position: relative; }
   .cover--box:hover .cover--box--front {
-    transform: rotateY(-180deg) scale(1.7) translateX(60px); }
+    transform: rotateY(-180deg); }
   .cover--box:hover .cover--box--back {
-    transform: rotateY(0) scale(1.7) translateX(60px); }
+    transform: rotateY(0) scale(1.5) translateX(50px); }
+  .cover--box:hover .cover__img--pointer {
+    z-index: 0; }
+
+.cover__img--pointer {
+  width: 30px;
+  position: absolute;
+  z-index: 1000;
+  top: 27rem;
+  left: 50%;
+  animation-duration: 1s;
+  animation-name: pointer;
+  animation-iteration-count: infinite; }
 
 .download {
   margin-top: 31rem;
@@ -766,6 +786,9 @@ a {
 #book-container {
   width: 100vw; }
 
+#book-header {
+  padding-top: 10rem; }
+
 .book-containter {
   display: flex;
   justify-content: space-between;
@@ -792,6 +815,9 @@ a {
     border: 1px solid #666;
     height: 3rem; }
 
+#author {
+  padding-top: 10rem; }
+
 .author__box {
   text-align: center;
   line-height: 1.75rem; }
@@ -802,8 +828,6 @@ a {
     color: #666; }
     .author__box a:hover {
       color: #b5c5d3; }
-  .author__box--1 {
-    margin-top: 10rem; }
   .author__box--2 {
     margin-top: 7rem; }
   .author__box--header {
@@ -884,7 +908,7 @@ a {
     left: 3rem; }
 
 #page {
-  margin: 7rem 3rem;
+  margin: 0 3rem 7rem 3rem;
   width: 95vw;
   text-align: left; }
 
@@ -907,8 +931,8 @@ a {
     .cabinet-page a:hover {
       color: #b5c5d3; }
 
-.cabinet-header {
-  margin-bottom: 1rem; }
+#cabinet_header {
+  padding-top: 10rem; }
 
 .cabinet-content {
   display: flex;
@@ -988,7 +1012,7 @@ a {
   width: 100vw; }
 
 .osteopathie-page {
-  margin-top: 10rem; }
+  padding-top: 10rem; }
   .osteopathie-page p {
     font-weight: 400; }
 
@@ -1019,12 +1043,13 @@ a {
   text-decoration: none; }
 
 #specialisation {
-  margin-top: 10rem; }
+  padding-top: 10rem; }
 
 .spe-body {
   display: flex;
   flex-direction: row;
-  justify-content: space-around; }
+  justify-content: space-around;
+  margin: 3rem 1rem; }
 
 .spe-img-box {
   width: 30%;
@@ -1095,7 +1120,7 @@ a {
     .sport-card:hover .sport-card--header h5 {
       transform: translateY(-150px); }
   .sport-card:hover div.sport-card--body {
-    transform: translateY(-150px);
+    transform: translateY(-200px);
     color: #f9f9f9; }
 
 .sport-card--body {
@@ -1106,3 +1131,141 @@ a {
   margin: 1rem; }
   .sport-card--body p {
     font-weight: 400; }
+
+#osteo_baby {
+  margin-top: 10rem; }
+
+.spe-baby {
+  display: flex;
+  justify-content: space-around; }
+
+.baby-card {
+  position: relative;
+  width: 20rem;
+  height: 26rem;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  overflow: hidden; }
+  .baby-card--header {
+    text-align: center;
+    height: 19rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1s; }
+    .baby-card--header h5 {
+      transition: all 1s;
+      color: #f9f9f9; }
+    .baby-card--header--1 {
+      background-image: url("../img/baby-2.jpg");
+      background-size: cover; }
+    .baby-card--header--2 {
+      background-image: url("../img/kid.jpg");
+      background-size: cover; }
+    .baby-card--header--3 {
+      background-image: url("../img/young.jpg");
+      background-size: cover; }
+  .baby-card:hover .baby-card--header {
+    height: 26rem;
+    filter: blur(7px); }
+    .baby-card:hover .baby-card--header h5 {
+      transform: translateY(-150px); }
+  .baby-card:hover div.baby-card--body {
+    transform: translateY(-200px);
+    color: #f9f9f9; }
+
+.baby-card--body {
+  position: absolute;
+  top: 19rem;
+  transition: all 1s;
+  color: #666666;
+  margin: 1rem; }
+  .baby-card--body p {
+    font-weight: 400; }
+
+#osteo_pregnant {
+  margin-top: 10rem; }
+
+.spe-pregnant {
+  display: flex;
+  justify-content: space-around; }
+
+.pregnant-card {
+  position: relative;
+  width: 20rem;
+  height: 26rem;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  border-radius: 15px;
+  overflow: hidden; }
+  .pregnant-card--header {
+    text-align: center;
+    height: 19rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: all 1s; }
+    .pregnant-card--header h5 {
+      transition: all 1s;
+      color: #f9f9f9; }
+    .pregnant-card--header--1 {
+      background-image: url("../img/pregnant-1.jpg");
+      background-size: cover; }
+    .pregnant-card--header--2 {
+      background-image: url("../img/pregnant-2.jpg");
+      background-size: cover; }
+    .pregnant-card--header--3 {
+      background-image: url("../img/pregnant-3.jpg");
+      background-size: cover; }
+  .pregnant-card:hover .pregnant-card--header {
+    height: 26rem;
+    filter: blur(7px); }
+    .pregnant-card:hover .pregnant-card--header h5 {
+      transform: translateY(-150px); }
+  .pregnant-card:hover div.pregnant-card--body {
+    transform: translateY(-200px);
+    color: #f9f9f9; }
+
+.pregnant-card--body {
+  position: absolute;
+  top: 19rem;
+  transition: all 1s;
+  color: #666666;
+  margin: 1rem; }
+  .pregnant-card--body p {
+    font-weight: 400; }
+
+#reasons {
+  padding-top: 10rem; }
+  #reasons p {
+    color: #666666;
+    font-weight: 400; }
+
+.reason-modal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+.reason-modal--sub {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around; }
+  .reason-modal--sub--1 {
+    margin-bottom: 4rem; }
+
+.reason-box {
+  width: 40%;
+  height: 20rem;
+  margin: 1rem;
+  display: flex;
+  flex-direction: row; }
+
+.reason-img {
+  width: 30%;
+  border-radius: 5px;
+  opacity: 0.8;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  transform: translate(-50px, -20px); }
+
+.reason-text {
+  margin-left: 1rem;
+  transform: translateY(-50px); }
