--- a/src/assets/sass/abstracts/_icon.scss
+++ b/src/assets/sass/abstracts/_icon.scss
@@ -22,7 +22,7 @@
 }
 
 .icon-arrow-left{
-  animation-duration: 1s;
+  animation-duration: .8s;
   animation-name: arrow-left;
   animation-iteration-count: infinite;
 }
