--- a/src/assets/sass/page/reasons.scss
+++ b/src/assets/sass/page/reasons.scss
@@ -35,7 +35,7 @@
   width: 30%;
   border-radius: 5px;
   opacity: 0.8;
-  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 10px 5px rgba(0, 0, 0, 0.5);
   transform: translate(-50px, -20px);
 }
 
